// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExperimentList > loads multiple experiments 1`] = `
<DocumentFragment>
  <div>
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
            for="tableFilterBox"
            id="tableFilterBox-label"
          >
            Filter experiments
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
              id="tableFilterBox"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-29 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-31 PrivateNotchedOutline-legendNotched-32"
              >
                <span>
                  Filter experiments
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss feotlki"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            style="display: inline-block; min-width: 40px; width: 40px;"
          />
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 33.33333333333333%;"
          title="Experiment name"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Experiment name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 66.66666666666666%;"
          title="Description"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d feotlki"
            data-row-id="testexperiment1"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <button
                aria-label="Expand"
                class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 17l5-5-5-5v10z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 33.33333333333333%;"
            >
              <a
                class="link_f3dwag7"
                href="/experiments/details/testexperiment1"
                title="experiment with id: testexperiment1"
              >
                experiment with id: testexperiment1
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 66.66666666666666%;"
            />
          </div>
        </div>
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d feotlki"
            data-row-id="testexperiment2"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <button
                aria-label="Expand"
                class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 17l5-5-5-5v10z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 33.33333333333333%;"
            >
              <a
                class="link_f3dwag7"
                href="/experiments/details/testexperiment2"
                title="experiment with id: testexperiment2"
              >
                experiment with id: testexperiment2
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 66.66666666666666%;"
            />
          </div>
        </div>
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d feotlki"
            data-row-id="testexperiment3"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <button
                aria-label="Expand"
                class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 17l5-5-5-5v10z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 33.33333333333333%;"
            >
              <a
                class="link_f3dwag7"
                href="/experiments/details/testexperiment3"
                title="experiment with id: testexperiment3"
              >
                experiment with id: testexperiment3
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 66.66666666666666%;"
            />
          </div>
        </div>
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d feotlki"
            data-row-id="testexperiment4"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <button
                aria-label="Expand"
                class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 17l5-5-5-5v10z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 33.33333333333333%;"
            >
              <a
                class="link_f3dwag7"
                href="/experiments/details/testexperiment4"
                title="experiment with id: testexperiment4"
              >
                experiment with id: testexperiment4
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 66.66666666666666%;"
            />
          </div>
        </div>
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d feotlki"
            data-row-id="testexperiment5"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <button
                aria-label="Expand"
                class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 17l5-5-5-5v10z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 33.33333333333333%;"
            >
              <a
                class="link_f3dwag7"
                href="/experiments/details/testexperiment5"
                title="experiment with id: testexperiment5"
              >
                experiment with id: testexperiment5
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 66.66666666666666%;"
            />
          </div>
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              role="button"
              tabindex="0"
            >
              10
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="10"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExperimentList > loads one experiment 1`] = `
<DocumentFragment>
  <div>
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
            for="tableFilterBox"
            id="tableFilterBox-label"
          >
            Filter experiments
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
              id="tableFilterBox"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-23 PrivateNotchedOutline-legendNotched-24"
              >
                <span>
                  Filter experiments
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss feotlki"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            style="display: inline-block; min-width: 40px; width: 40px;"
          />
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 33.33333333333333%;"
          title="Experiment name"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Experiment name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 66.66666666666666%;"
          title="Description"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer_f1l0zr01"
        >
          <div
            aria-checked="false"
            class="tableRow row_f12b5y4d feotlki"
            data-row-id="testexperiment1"
            data-testid="table-row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <button
                aria-label="Expand"
                class="MuiButtonBase-root MuiIconButton-root expandButton_fcy5tjm"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 17l5-5-5-5v10z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 33.33333333333333%;"
            >
              <a
                class="link_f3dwag7"
                href="/experiments/details/testexperiment1"
                title="experiment with id: testexperiment1"
              >
                experiment with id: testexperiment1
              </a>
            </div>
            <div
              class="cell_fy8nr2z"
              style="width: 66.66666666666666%;"
            />
          </div>
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              role="button"
              tabindex="0"
            >
              10
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="10"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExperimentList > reloads the experiment when refresh is called 1`] = `
<DocumentFragment>
  <div>
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
            for="tableFilterBox"
            id="tableFilterBox-label"
          >
            Filter experiments
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
              id="tableFilterBox"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-25 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-27 PrivateNotchedOutline-legendNotched-28"
              >
                <span>
                  Filter experiments
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss feotlki"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            style="display: inline-block; min-width: 40px; width: 40px;"
          />
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 33.33333333333333%;"
          title="Experiment name"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Experiment name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 66.66666666666666%;"
          title="Description"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="emptyMessage_f1v5g0b7"
        >
          No archived experiments found.
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              role="button"
              tabindex="0"
            >
              10
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="10"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExperimentList > renders the empty experience 1`] = `
<DocumentFragment>
  <div>
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
            for="tableFilterBox"
            id="tableFilterBox-label"
          >
            Filter experiments
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
              id="tableFilterBox"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-3 PrivateNotchedOutline-legendNotched-4"
              >
                <span>
                  Filter experiments
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss feotlki"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            style="display: inline-block; min-width: 40px; width: 40px;"
          />
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 33.33333333333333%;"
          title="Experiment name"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Experiment name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 66.66666666666666%;"
          title="Description"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="emptyMessage_f1v5g0b7"
        >
          No archived experiments found.
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              role="button"
              tabindex="0"
            >
              10
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="10"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExperimentList > renders the empty experience in ARCHIVED state 1`] = `
<DocumentFragment>
  <div>
    <div
      class="pageOverflowHidden_f15djeb2"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root filterBox_frxzdj2"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root noMargin_fl8qkup MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
            for="tableFilterBox"
            id="tableFilterBox-label"
          >
            Filter experiments
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root noLeftPadding_f106pxd4 MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          >
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
              id="tableFilterBox"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline filterBorderRadius_f1ypp5hy"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-7 PrivateNotchedOutline-legendNotched-8"
              >
                <span>
                  Filter experiments
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="header_f15jqnss feotlki"
      >
        <div
          class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
        >
          <span
            style="display: inline-block; min-width: 40px; width: 40px;"
          />
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 33.33333333333333%;"
          title="Experiment name"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Experiment name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName_f1kdqshe"
          style="width: 66.66666666666666%;"
          title="Description"
        >
          <span
            aria-disabled="false"
            class="MuiButtonBase-root MuiTableSortLabel-root ellipsis_f15ay66x"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
          </span>
        </div>
      </div>
      <div
        class="scrollContainer_fea2b5v"
        style="min-height: 60px;"
      >
        <div
          class="emptyMessage_f1v5g0b7"
        >
          No archived experiments found.
        </div>
      </div>
      <div
        class="footer_f1fl9hjk"
      >
        <span
          class="fzbgmju"
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root MuiTextField-root verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              role="button"
              tabindex="0"
            >
              10
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="10"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
